--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <h2 class="title d-none wow fadeInUp" data-wow-delay=".2s">Howdy Techy Team<br>Meet <i>Jess</i><br>Your <br><span>AI Agent</span> <br><span>Troubleshooter</span><br><span>Support Specialist</span><br><span>Virtual Helper</span><br><span>Navigator</span></h2>
                                 <p class="wow fadeInUp" data-wow-delay=".4s"><b>Meet Jess, your go-to solution for seamless support! Jess takes over all inbound calls, handling tech issues and device damages with precision. From cracked screens to system glitches, Jess simplifies the process and guides customers straight to your stores for quick resolutions. Say goodbye to confusion and let Jess turn every call into a step toward a solution!</b></p>
                                 <div class="banner-btn">
-                                    <elevenlabs-convai agent-id="vjFkWvncPGC8tlxwNGhm"></elevenlabs-convai><script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
+                                    <elevenlabs-convai agent-id="ZqPymEY8ALmeGvIyaXGC"></elevenlabs-convai><script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
                                 </div>
                             </div>
                         </div>
