--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Jess AI</title>
+        <title>HomeVestors Bot</title>
         <meta name="description" content="Jess AI">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
-        <!-- Place favicon.ico in the root directory -->
 
 		<!-- CSS here -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -57,7 +55,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="banner-content ta-animated-headline">
-                                <h2 class="title ah-headline wow fadeInUp" data-wow-delay=".2s"><span>Howdy Techy Team 👋 - Meet Jess</span><br>Your
+                                <h2 class="title ah-headline wow fadeInUp" data-wow-delay=".2s"><span>Howdy April 👋 - Meet Jess</span><br>Your
                                     <span class="ah-words-wrapper">
                                         <b class="is-visible">AI Agent</b>
                                         <b>Troubleshooter</b>
@@ -66,8 +64,7 @@
                                         <b>Navigator</b>
                                     </span>
                                 </h2>
-                                <h2 class="title d-none wow fadeInUp" data-wow-delay=".2s">Howdy Techy Team<br>Meet <i>Jess</i><br>Your <br><span>AI Agent</span> <br><span>Troubleshooter</span><br><span>Support Specialist</span><br><span>Virtual Helper</span><br><span>Navigator</span></h2>
-                                <p class="wow fadeInUp" data-wow-delay=".4s"><b>Meet Jess, your go-to solution for seamless support! Jess takes over all inbound calls, handling tech issues and device damages with precision. From cracked screens to system glitches, Jess simplifies the process and guides customers straight to your stores for quick resolutions. Say goodbye to confusion and let Jess turn every call into a step toward a solution!</b></p>
+                                <h2 class="title d-none wow fadeInUp" data-wow-delay=".2s">Howdy April<br>Meet <i>Jess</i><br>Your <br><span>AI Agent</span> <br><span>Troubleshooter</span><br><span>Support Specialist</span><br><span>Virtual Helper</span><br><span>Navigator</span></h2>
                                 <div class="banner-btn">
                                     <elevenlabs-convai agent-id="ZqPymEY8ALmeGvIyaXGC"></elevenlabs-convai><script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
                                 </div>
