--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>HomeVestors Bot</title>
-        <meta name="description" content="Jess AI">
+        <meta name="description" content="Sarah AI">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -55,7 +55,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="banner-content ta-animated-headline">
-                                <h2 class="title ah-headline wow fadeInUp" data-wow-delay=".2s"><span>Howdy April 👋 - Meet Jess</span><br>Your
+                                <h2 class="title ah-headline wow fadeInUp" data-wow-delay=".2s"><span>Howdy April 👋 - Meet Sarah</span><br>Your
                                     <span class="ah-words-wrapper">
                                         <b class="is-visible">AI Agent</b>
                                         <b>Troubleshooter</b>
@@ -64,7 +64,7 @@
                                         <b>Navigator</b>
                                     </span>
                                 </h2>
-                                <h2 class="title d-none wow fadeInUp" data-wow-delay=".2s">Howdy April<br>Meet <i>Jess</i><br>Your <br><span>AI Agent</span> <br><span>Troubleshooter</span><br><span>Support Specialist</span><br><span>Virtual Helper</span><br><span>Navigator</span></h2>
+                                <h2 class="title d-none wow fadeInUp" data-wow-delay=".2s">Howdy April<br>Meet <i>Sarah</i><br>Your <br><span>AI Agent</span> <br><span>Troubleshooter</span><br><span>Support Specialist</span><br><span>Virtual Helper</span><br><span>Navigator</span></h2>
                                 <div class="banner-btn">
                                     <elevenlabs-convai agent-id="ZqPymEY8ALmeGvIyaXGC"></elevenlabs-convai><script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
                                 </div>
